// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> BackgroundCallout story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="card card--container-style-low card--container-color-call-out w-[450px]"
  >
    <div
      class="card__header header--size-md"
    >
      <div
        class="header__text"
      >
        <div
          class="text text--overline-md header__eyebrow header--size-md"
        >
          Recommended for you
        </div>
        <h3
          class="text text--title-lg header__title header--size-md"
        >
          Question of the day
        </h3>
        <div
          class="text text--body-md header__sub-title header--size-md"
        >
          Get to know your colleagues
        </div>
      </div>
      <div
        class="header__action"
      >
        <div
          class="menu"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            data-headlessui-state=""
            id="headlessui-menu-button-:rp:"
            type="button"
          >
            <svg
              class="icon"
              fill="currentColor"
              height="32px"
              role="img"
              style="--icon-size: 32px;"
              viewBox="0 0 24 24"
              width="32px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                show more
              </title>
              <path
                d="M6.23071 13.5C5.81821 13.5 5.46513 13.3531 5.17146 13.0592C4.87763 12.7656 4.73071 12.4125 4.73071 12C4.73071 11.5875 4.87763 11.2344 5.17146 10.9408C5.46513 10.6469 5.81821 10.5 6.23071 10.5C6.64321 10.5 6.99638 10.6469 7.29021 10.9408C7.58388 11.2344 7.73071 11.5875 7.73071 12C7.73071 12.4125 7.58388 12.7656 7.29021 13.0592C6.99638 13.3531 6.64321 13.5 6.23071 13.5ZM12 13.5C11.5875 13.5 11.2344 13.3531 10.9407 13.0592C10.6469 12.7656 10.5 12.4125 10.5 12C10.5 11.5875 10.6469 11.2344 10.9407 10.9408C11.2344 10.6469 11.5875 10.5 12 10.5C12.4125 10.5 12.7655 10.6469 13.0592 10.9408C13.353 11.2344 13.5 11.5875 13.5 12C13.5 12.4125 13.353 12.7656 13.0592 13.0592C12.7655 13.3531 12.4125 13.5 12 13.5ZM17.7692 13.5C17.3567 13.5 17.0035 13.3531 16.7097 13.0592C16.416 12.7656 16.2692 12.4125 16.2692 12C16.2692 11.5875 16.416 11.2344 16.7097 10.9408C17.0035 10.6469 17.3567 10.5 17.7692 10.5C18.1817 10.5 18.5348 10.6469 18.8285 10.9408C19.1223 11.2344 19.2692 11.5875 19.2692 12C19.2692 12.4125 19.1223 12.7656 18.8285 13.0592C18.5348 13.3531 18.1817 13.5 17.7692 13.5Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="card__body"
    >
      <div
        class="fpo my-4"
      >
        Card Body
      </div>
    </div>
    <div
      class="card__footer"
    >
      <div
        class="button-group button-group--horizontal"
      >
        <button
          class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
          type="button"
        >
          <span
            class="text text--label-lg button__text"
          >
            Primary
          </span>
        </button>
      </div>
    </div>
    <div
      class="card__top-stripe top-stripe--none"
    />
  </div>
</div>
`;

exports[`<Card /> CancelMembership story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="card card--container-style-low card--container-color-default w-[450px]"
  >
    <div
      class="card__header header--size-sm"
    >
      <div
        class="header__text"
      >
        <h3
          class="text text--title-sm header__title header--size-sm"
        >
          Cancel membership?
        </h3>
        <div
          class="text text--body-xs header__sub-title header--size-sm"
        >
          We're sad to see you go
        </div>
      </div>
    </div>
    <div
      class="card__body"
    >
      <p
        class="text text--body-sm py-4"
      >
        Lorem ipsum dolor sit amet consectetur. Id pretium consequat consequat aliquam arcu
      </p>
    </div>
    <div
      class="card__footer"
    >
      <div
        class="button-group button-group--horizontal"
      >
        <button
          class="button button--layout-none button--primary button--md button--size-md button--variant-critical"
          type="button"
        >
          <span
            class="text text--label-md button__text"
          >
            Confirm cancellation
          </span>
        </button>
      </div>
    </div>
    <div
      class="card__top-stripe top-stripe--none"
    />
  </div>
</div>
`;

exports[`<Card /> CheckboxCards story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="flex gap-spacing-size-1"
  >
    <label
      class="card__behavior-label"
      for=":rv:"
    >
      <div
        class="card card--container-style-low card--container-color-default card--is-interactive card--has-behavior w-[450px]"
      >
        <div
          class="card__header header--size-md"
        >
          <div
            class="header__text"
          >
            <div
              class="text text--overline-md header__eyebrow header--size-md"
            >
              Recommended for you
            </div>
            <h3
              class="text text--title-lg header__title header--size-md"
            >
              Question of the day
            </h3>
            <div
              class="text text--body-md header__sub-title header--size-md"
            >
              Get to know your colleagues
            </div>
          </div>
        </div>
        <div
          class="card__body"
        >
          <div
            class="fpo"
          >
            Card Body
          </div>
        </div>
        <div
          class="card__footer"
        >
          <div
            class="fpo"
          >
            Card Footer
          </div>
        </div>
        <div
          class="card__top-stripe top-stripe--medium"
        />
        <input
          class="card__behavior-input"
          id=":rv:"
          type="checkbox"
        />
      </div>
    </label>
    <label
      class="card__behavior-label"
      for=":r10:"
    >
      <div
        class="card card--container-style-low card--container-color-default card--is-interactive card--has-behavior w-[450px]"
      >
        <div
          class="card__header header--size-md"
        >
          <div
            class="header__text"
          >
            <div
              class="text text--overline-md header__eyebrow header--size-md"
            >
              Recommended for you
            </div>
            <h3
              class="text text--title-lg header__title header--size-md"
            >
              Question of the day
            </h3>
            <div
              class="text text--body-md header__sub-title header--size-md"
            >
              Get to know your colleagues
            </div>
          </div>
        </div>
        <div
          class="card__body"
        >
          <div
            class="fpo"
          >
            Card Body
          </div>
        </div>
        <div
          class="card__footer"
        >
          <div
            class="fpo"
          >
            Card Footer
          </div>
        </div>
        <div
          class="card__top-stripe top-stripe--medium"
        />
        <input
          class="card__behavior-input"
          id=":r10:"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`<Card /> Default story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="card card--container-style-low card--container-color-default w-[450px]"
  >
    <div
      class="card__header header--size-md"
    >
      <div
        class="header__text"
      >
        <div
          class="text text--overline-md header__eyebrow header--size-md"
        >
          New data set
        </div>
        <h3
          class="text text--title-lg header__title header--size-md"
        >
          Text Complexity
        </h3>
        <div
          class="text text--body-md header__sub-title header--size-md"
        >
          Get to know your colleagues
        </div>
      </div>
      <div
        class="header__action"
      >
        <div
          class="menu"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            data-headlessui-state=""
            id="headlessui-menu-button-:r3:"
            type="button"
          >
            <svg
              class="icon"
              fill="currentColor"
              height="32px"
              role="img"
              style="--icon-size: 32px;"
              viewBox="0 0 24 24"
              width="32px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                show more
              </title>
              <path
                d="M6.23071 13.5C5.81821 13.5 5.46513 13.3531 5.17146 13.0592C4.87763 12.7656 4.73071 12.4125 4.73071 12C4.73071 11.5875 4.87763 11.2344 5.17146 10.9408C5.46513 10.6469 5.81821 10.5 6.23071 10.5C6.64321 10.5 6.99638 10.6469 7.29021 10.9408C7.58388 11.2344 7.73071 11.5875 7.73071 12C7.73071 12.4125 7.58388 12.7656 7.29021 13.0592C6.99638 13.3531 6.64321 13.5 6.23071 13.5ZM12 13.5C11.5875 13.5 11.2344 13.3531 10.9407 13.0592C10.6469 12.7656 10.5 12.4125 10.5 12C10.5 11.5875 10.6469 11.2344 10.9407 10.9408C11.2344 10.6469 11.5875 10.5 12 10.5C12.4125 10.5 12.7655 10.6469 13.0592 10.9408C13.353 11.2344 13.5 11.5875 13.5 12C13.5 12.4125 13.353 12.7656 13.0592 13.0592C12.7655 13.3531 12.4125 13.5 12 13.5ZM17.7692 13.5C17.3567 13.5 17.0035 13.3531 16.7097 13.0592C16.416 12.7656 16.2692 12.4125 16.2692 12C16.2692 11.5875 16.416 11.2344 16.7097 10.9408C17.0035 10.6469 17.3567 10.5 17.7692 10.5C18.1817 10.5 18.5348 10.6469 18.8285 10.9408C19.1223 11.2344 19.2692 11.5875 19.2692 12C19.2692 12.4125 19.1223 12.7656 18.8285 13.0592C18.5348 13.3531 18.1817 13.5 17.7692 13.5Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="card__body pb-spacing-size-5 pt-spacing-size-2"
    >
      <p
        class="text text--title-md pb-spacing-size-half"
      >
        Title text
      </p>
      <p
        class="text text--body-md"
      >
        Lorem ipsum dolor sit amet consectetur. Id pretium consequat consequat aliquam arcu lacus semper lectus proin. Turpis dolor tincidunt vehicula egestas suspendisse senectus enim. Quam euismod orci commodo aliquet vestibulum egestas amet mi. Iaculis pulvinar aenean duis justo pretium aenean.
      </p>
    </div>
    <div
      class="card__footer"
    >
      <div
        class="button-group button-group--horizontal"
      >
        <button
          class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
          type="button"
        >
          <span
            class="text text--label-lg button__text"
          >
            Primary action
          </span>
        </button>
      </div>
    </div>
    <div
      class="card__top-stripe top-stripe--none"
    />
  </div>
</div>
`;

exports[`<Card /> IsInteractive story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="card card--container-style-low card--container-color-default card--is-interactive w-[450px]"
  >
    <div
      class="card__header header--size-md"
    >
      <div
        class="header__text"
      >
        <div
          class="text text--overline-md header__eyebrow header--size-md"
        >
          New data set
        </div>
        <h3
          class="text text--title-lg header__title header--size-md"
        >
          Text Complexity
        </h3>
        <div
          class="text text--body-md header__sub-title header--size-md"
        >
          Get to know your colleagues
        </div>
      </div>
      <div
        class="header__action"
      >
        <div
          class="menu"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            data-headlessui-state=""
            id="headlessui-menu-button-:ra:"
            type="button"
          >
            <svg
              class="icon"
              fill="currentColor"
              height="32px"
              role="img"
              style="--icon-size: 32px;"
              viewBox="0 0 24 24"
              width="32px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                show more
              </title>
              <path
                d="M6.23071 13.5C5.81821 13.5 5.46513 13.3531 5.17146 13.0592C4.87763 12.7656 4.73071 12.4125 4.73071 12C4.73071 11.5875 4.87763 11.2344 5.17146 10.9408C5.46513 10.6469 5.81821 10.5 6.23071 10.5C6.64321 10.5 6.99638 10.6469 7.29021 10.9408C7.58388 11.2344 7.73071 11.5875 7.73071 12C7.73071 12.4125 7.58388 12.7656 7.29021 13.0592C6.99638 13.3531 6.64321 13.5 6.23071 13.5ZM12 13.5C11.5875 13.5 11.2344 13.3531 10.9407 13.0592C10.6469 12.7656 10.5 12.4125 10.5 12C10.5 11.5875 10.6469 11.2344 10.9407 10.9408C11.2344 10.6469 11.5875 10.5 12 10.5C12.4125 10.5 12.7655 10.6469 13.0592 10.9408C13.353 11.2344 13.5 11.5875 13.5 12C13.5 12.4125 13.353 12.7656 13.0592 13.0592C12.7655 13.3531 12.4125 13.5 12 13.5ZM17.7692 13.5C17.3567 13.5 17.0035 13.3531 16.7097 13.0592C16.416 12.7656 16.2692 12.4125 16.2692 12C16.2692 11.5875 16.416 11.2344 16.7097 10.9408C17.0035 10.6469 17.3567 10.5 17.7692 10.5C18.1817 10.5 18.5348 10.6469 18.8285 10.9408C19.1223 11.2344 19.2692 11.5875 19.2692 12C19.2692 12.4125 19.1223 12.7656 18.8285 13.0592C18.5348 13.3531 18.1817 13.5 17.7692 13.5Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="card__body pb-spacing-size-5 pt-spacing-size-2"
    >
      <p
        class="text text--title-md pb-spacing-size-half"
      >
        Title text
      </p>
      <p
        class="text text--body-md"
      >
        Lorem ipsum dolor sit amet consectetur. Id pretium consequat consequat aliquam arcu lacus semper lectus proin. Turpis dolor tincidunt vehicula egestas suspendisse senectus enim. Quam euismod orci commodo aliquet vestibulum egestas amet mi. Iaculis pulvinar aenean duis justo pretium aenean.
      </p>
    </div>
    <div
      class="card__footer"
    >
      <div
        class="button-group button-group--horizontal"
      >
        <button
          class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
          type="button"
        >
          <span
            class="text text--label-lg button__text"
          >
            Primary action
          </span>
        </button>
      </div>
    </div>
    <div
      class="card__top-stripe top-stripe--none"
    />
  </div>
</div>
`;

exports[`<Card /> RadioCards story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="flex gap-spacing-size-1"
  >
    <label
      class="card__behavior-label"
      for=":rt:"
    >
      <div
        class="card card--container-style-low card--container-color-default card--is-interactive card--has-behavior w-[450px]"
      >
        <div
          class="card__header header--size-md"
        >
          <div
            class="header__text"
          >
            <div
              class="text text--overline-md header__eyebrow header--size-md"
            >
              Recommended for you
            </div>
            <h3
              class="text text--title-lg header__title header--size-md"
            >
              Question of the day
            </h3>
            <div
              class="text text--body-md header__sub-title header--size-md"
            >
              Get to know your colleagues
            </div>
          </div>
        </div>
        <div
          class="card__body"
        >
          <div
            class="fpo"
          >
            Card Body
          </div>
        </div>
        <div
          class="card__footer"
        >
          <div
            class="fpo"
          >
            Card Footer
          </div>
        </div>
        <div
          class="card__top-stripe top-stripe--medium"
        />
        <input
          class="card__behavior-input"
          id=":rt:"
          name="test"
          type="radio"
        />
      </div>
    </label>
    <label
      class="card__behavior-label"
      for=":ru:"
    >
      <div
        class="card card--container-style-low card--container-color-default card--is-interactive card--has-behavior w-[450px]"
      >
        <div
          class="card__header header--size-md"
        >
          <div
            class="header__text"
          >
            <div
              class="text text--overline-md header__eyebrow header--size-md"
            >
              Recommended for you
            </div>
            <h3
              class="text text--title-lg header__title header--size-md"
            >
              Question of the day
            </h3>
            <div
              class="text text--body-md header__sub-title header--size-md"
            >
              Get to know your colleagues
            </div>
          </div>
        </div>
        <div
          class="card__body"
        >
          <div
            class="fpo"
          >
            Card Body
          </div>
        </div>
        <div
          class="card__footer"
        >
          <div
            class="fpo"
          >
            Card Footer
          </div>
        </div>
        <div
          class="card__top-stripe top-stripe--medium"
        />
        <input
          class="card__behavior-input"
          id=":ru:"
          name="test"
          type="radio"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`<Card /> WhileDragging story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="card card--container-style-low card--container-color-default card--is-dragging-true w-[450px]"
  >
    <div
      class="card__header header--size-md"
    >
      <div
        class="header__text"
      >
        <div
          class="text text--overline-md header__eyebrow header--size-md"
        >
          New data set
        </div>
        <h3
          class="text text--title-lg header__title header--size-md"
        >
          Text Complexity
        </h3>
        <div
          class="text text--body-md header__sub-title header--size-md"
        >
          Get to know your colleagues
        </div>
      </div>
      <div
        class="header__action"
      >
        <div
          class="menu"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            data-headlessui-state=""
            id="headlessui-menu-button-:r14:"
            type="button"
          >
            <svg
              class="icon"
              fill="currentColor"
              height="32px"
              role="img"
              style="--icon-size: 32px;"
              viewBox="0 0 24 24"
              width="32px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                show more
              </title>
              <path
                d="M6.23071 13.5C5.81821 13.5 5.46513 13.3531 5.17146 13.0592C4.87763 12.7656 4.73071 12.4125 4.73071 12C4.73071 11.5875 4.87763 11.2344 5.17146 10.9408C5.46513 10.6469 5.81821 10.5 6.23071 10.5C6.64321 10.5 6.99638 10.6469 7.29021 10.9408C7.58388 11.2344 7.73071 11.5875 7.73071 12C7.73071 12.4125 7.58388 12.7656 7.29021 13.0592C6.99638 13.3531 6.64321 13.5 6.23071 13.5ZM12 13.5C11.5875 13.5 11.2344 13.3531 10.9407 13.0592C10.6469 12.7656 10.5 12.4125 10.5 12C10.5 11.5875 10.6469 11.2344 10.9407 10.9408C11.2344 10.6469 11.5875 10.5 12 10.5C12.4125 10.5 12.7655 10.6469 13.0592 10.9408C13.353 11.2344 13.5 11.5875 13.5 12C13.5 12.4125 13.353 12.7656 13.0592 13.0592C12.7655 13.3531 12.4125 13.5 12 13.5ZM17.7692 13.5C17.3567 13.5 17.0035 13.3531 16.7097 13.0592C16.416 12.7656 16.2692 12.4125 16.2692 12C16.2692 11.5875 16.416 11.2344 16.7097 10.9408C17.0035 10.6469 17.3567 10.5 17.7692 10.5C18.1817 10.5 18.5348 10.6469 18.8285 10.9408C19.1223 11.2344 19.2692 11.5875 19.2692 12C19.2692 12.4125 19.1223 12.7656 18.8285 13.0592C18.5348 13.3531 18.1817 13.5 17.7692 13.5Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="card__body pb-spacing-size-5 pt-spacing-size-2"
    >
      <p
        class="text text--title-md pb-spacing-size-half"
      >
        Title text
      </p>
      <p
        class="text text--body-md"
      >
        Lorem ipsum dolor sit amet consectetur. Id pretium consequat consequat aliquam arcu lacus semper lectus proin. Turpis dolor tincidunt vehicula egestas suspendisse senectus enim. Quam euismod orci commodo aliquet vestibulum egestas amet mi. Iaculis pulvinar aenean duis justo pretium aenean.
      </p>
    </div>
    <div
      class="card__footer"
    >
      <div
        class="button-group button-group--horizontal"
      >
        <button
          class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
          type="button"
        >
          <span
            class="text text--label-lg button__text"
          >
            Primary action
          </span>
        </button>
      </div>
    </div>
    <div
      class="card__top-stripe top-stripe--none"
    />
  </div>
</div>
`;

exports[`<Card /> WithCustomizedHeader story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="card card--container-style-low card--container-color-default w-[450px]"
  >
    <div
      class="card__header header--size-md mb-spacing-size-2"
    >
      <div
        class="header__custom"
      >
        Displaying 
        <strong>
          some text
        </strong>
         with 
        <em>
          mixed formatting
        </em>
        .
      </div>
    </div>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <div
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </div>
    <div
      class="card__top-stripe top-stripe--none"
    />
  </div>
</div>
`;

exports[`<Card /> WithSmallFullHeaderAndIcon story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="card card--container-style-low card--container-color-default w-[450px]"
  >
    <div
      class="card__header header--size-sm"
    >
      <div
        class="header__text"
      >
        <div
          class="text text--overline-sm header__eyebrow header--size-sm"
        >
          New data set
        </div>
        <h3
          class="text text--title-sm header__title header--size-sm"
        >
          Text Complexity
        </h3>
        <div
          class="text text--body-xs header__sub-title header--size-sm"
        >
          Get to know your colleagues
        </div>
      </div>
      <div
        class="header__action"
      >
        <div
          class="menu"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            data-headlessui-state=""
            id="headlessui-menu-button-:rh:"
            type="button"
          >
            <svg
              class="icon"
              fill="currentColor"
              height="32px"
              role="img"
              style="--icon-size: 32px;"
              viewBox="0 0 24 24"
              width="32px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                show more
              </title>
              <path
                d="M6.23071 13.5C5.81821 13.5 5.46513 13.3531 5.17146 13.0592C4.87763 12.7656 4.73071 12.4125 4.73071 12C4.73071 11.5875 4.87763 11.2344 5.17146 10.9408C5.46513 10.6469 5.81821 10.5 6.23071 10.5C6.64321 10.5 6.99638 10.6469 7.29021 10.9408C7.58388 11.2344 7.73071 11.5875 7.73071 12C7.73071 12.4125 7.58388 12.7656 7.29021 13.0592C6.99638 13.3531 6.64321 13.5 6.23071 13.5ZM12 13.5C11.5875 13.5 11.2344 13.3531 10.9407 13.0592C10.6469 12.7656 10.5 12.4125 10.5 12C10.5 11.5875 10.6469 11.2344 10.9407 10.9408C11.2344 10.6469 11.5875 10.5 12 10.5C12.4125 10.5 12.7655 10.6469 13.0592 10.9408C13.353 11.2344 13.5 11.5875 13.5 12C13.5 12.4125 13.353 12.7656 13.0592 13.0592C12.7655 13.3531 12.4125 13.5 12 13.5ZM17.7692 13.5C17.3567 13.5 17.0035 13.3531 16.7097 13.0592C16.416 12.7656 16.2692 12.4125 16.2692 12C16.2692 11.5875 16.416 11.2344 16.7097 10.9408C17.0035 10.6469 17.3567 10.5 17.7692 10.5C18.1817 10.5 18.5348 10.6469 18.8285 10.9408C19.1223 11.2344 19.2692 11.5875 19.2692 12C19.2692 12.4125 19.1223 12.7656 18.8285 13.0592C18.5348 13.3531 18.1817 13.5 17.7692 13.5Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="card__body"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <div
      class="card__footer"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </div>
    <div
      class="card__top-stripe top-stripe--none"
    />
  </div>
</div>
`;
